<?xml version="1.0"?>
<package>
  <name>unitree_diagnostics</name>
  <version>1.0.0</version>
  <description>
    Publishes diagnostics information such as battery, velocity and gps quality. This package works specifically for ice9_ugi package. 
  </description>

  <author email="anthony.jiang.github@outlook.com">Zhengyi Jiang</author>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>unitree_legged_msgs</build_depend>
  <build_depend>unitree_diagnostics_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>unitree_legged_msgs</run_depend>
  <run_depend>unitree_diagnostics_msgs</run_depend>

  <export>
    <architecture_independent />
  </export>
</package>