<?xml version="1.0"?>

<package format="2">
  <name>unitree_diagnostics_msgs</name>
  <version>1.0.0</version>
  <description>
    The unitree diagnostics messgaes package.
  </description>
  <author email="anthony.jiang.github@outlook.com">Zhengyi Jiang</author>
  <maintainer email="anthony.jiang.github@outlook.com">Zhengyi Jiang</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  
</package>